# trajectory_test_assignment

./: .mypy.ini  .pre-commit-config.yaml  .ruff.toml  Dockerfile  README.md  pyproject.toml
src/trajectory_test_assignment/app/: __init__.py
src/trajectory_test_assignment/app/exceptions/: __init__.py  schedule_date_not_found_error.py
src/trajectory_test_assignment/app/models/: __init__.py  schedule.py  time_slot.py  workday.py
src/trajectory_test_assignment/infrastructure/: __init__.py  async_schedule_api_client.py  schedule_api_client.py
src/trajectory_test_assignment/infrastructure/api/: __init__.py  async_schedule_api_client.py
src/trajectory_test_assignment/infrastructure/exceptions/: __init__.py  schedule_api_client_error.py
src/trajectory_test_assignment/infrastructure/mappers/: __init__.py  schedule_mapper.py
src/trajectory_test_assignment/main/: cli.py
src/trajectory_test_assignment/presentation/: __init__.py
src/trajectory_test_assignment/presentation/cli/: handlers.py
tests/app_tests/: test_from_dict.py  test_get_busy_slots.py  test_get_free_slots.py  test_is_time_available.py
tests/infra_tests/: async_schedule_api_client_test.py  schedule_api_client_test.py  test_schedule_api_client.py
