[build-system]
requires = ["setuptools>=64.0"]
build-backend = "setuptools.build_meta"

[project]
name = "trajectory"
description = "test assignment"
version = "0.1.0"
requires-python = ">=3.12"

[project.optional-dependencies]
dev = [
    "mypy==1.15.*",
    "ruff==0.11.*",
    "pre-commit==4.2.*",
]
