[build-system]
requires = ["setuptools>=64.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["trajectory_test_assignment"]
package-dir = {"" = "src"}

[project]
name = "trajectory"
description = "test assignment"
version = "0.1.0"
requires-python = ">=3.12"

[project.optional-dependencies]
dev = [
    "mypy==1.15.*",
    "ruff==0.11.*",
    "pre-commit==4.2.*",
    "pytest==8.4.*",
    "pytest-asyncio==1.0.*",
    "==0.7.*",
]
